# muscle-architecture-ultrasound

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/raw/: sample_submission.csv
