[project]
name = "umud"
version = "0.1.0"
description = "Kaggle Muscle Architecture in Ultrasound Data Challenge"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "albumentations>=1.4.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "jupyterlab>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true

# CRITICAL FOR RTX 3080: Force PyTorch to use CUDA wheels
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu130"]